[package]
name = "tens"
version = "0.1.0"
authors = ["Sindre Sogge Heggen <sindre.heggen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.7"
geo = "0.18.0"

[profile.dev.package.'*']
opt-level = 3
